# Brevitas-Systems

./: .dockerignore  .env.example  .gitattributes  .gitignore  CACHING_PLAN.md  COFOUNDER_HANDOFF.md  DEPLOYMENT_GUIDE.md  Dockerfile  PHASE2_DELIVERABLES.md  PHASE2_IMPLEMENTATION.md  PHASE2_SEMANTIC_VALIDATION_REPORT.md  PHASE4_IMPLEMENTATION.md  README.md  REVAMP_PLAN.md  SUPABASE_SETUP.md  TOKEN_TRACKING_PLAN.md  eslint.config.mjs  integration.md  next.config.ts  nixpacks.toml  package-lock.json  package.json  posthog-setup-report.md  pyproject.toml  railway.json  railway.toml  requirements-demo.txt  run_demo.py  setup-database.js  test-form-submission.js  test-rate-limiting.js  test-supabase.js  test-waitlist.js  tests_phase2.py  tests_phase2_semantic_validation.py  vercel.json
.github/: semgrep.yml
.husky/: pre-commit  pre-push
api/: .secret_key  auth.py  billing_recovery.py  brevitas.db  build_info.py  company_admin.py  compliance_admin.py  distributed_limits.py  import_usage.py  jobs.py  mirror.py  observability.py  requirements.txt  runtime.py  server.py  store.py  worker.py
app/: page.tsx
archive/: README.md  how-it-works.html
benchmarks/: accuracy_suite.py  accuracy_suite_anthropic.json  accuracy_suite_deepseek.json  accuracy_suite_openai.json  cache_benchmark.py  cache_results_arc_n12.json  cache_results_arc_n2.json  cache_results_bbh_n12.json  cache_results_bbh_n2.json  cache_results_humaneval_n8.json  cache_results_mmlu_n12.json  context_accuracy_benchmark.py  context_accuracy_results_n15.json  context_accuracy_results_n15_phase2.json  context_accuracy_results_n2.json  context_accuracy_results_n30_phase2.json  deepseek_benchmark.py  deepseek_results.json  ground_truth_benchmark.py  ground_truth_results.json  ground_truth_v2_benchmark.py  ground_truth_v2_results_n1.json  ground_truth_v2_results_n10.json  ground_truth_v2_results_n2.json  ground_truth_v2_results_smoke.json  live_e2e.py  live_e2e_results.json  oss_ab.py  oss_ab_finance_deepseek.json  oss_ab_marketing_deepseek.json
brevitas/: __init__.py  _compress.py  _embed.py  chat.py  cli.py  compare.py  config.py  demos.py  identity.py  labels.py  observability.py  provider_reliability.py  proxy.py  receipts.py  resource_bounds.py  semantic_cache.py  session.py  webchat.py
dashboard/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
deploy/: cloud-run-api-staging.yaml  cloud-run-worker-staging.yaml  cloudbuild-api.yaml  fly.toml  railway-worker.json  railway.json  render.yaml
docs/: CLOUD_RUN_STAGING.md  COMPANY_ADMINISTRATION.md  COMPANY_A_ONBOARDING_TEST.md  CREDENTIAL_SECURITY.md  DATABASE_SCALING.md  DEMOS.md  DEPLOY_COMPRESS.md  GOOGLE_SEARCH_CONSOLE_SETUP.md  INSTALL.md  OBSERVABILITY.md  ONBOARDING.md  PROVIDER_RELIABILITY.md  RELEASE_PREFLIGHT.md  RELEASE_SECURITY.md  RESOURCE_BOUNDS.md  SEO.md  STAGING_CANARY.md  STRIPE_BILLING.md
public/: 404.html  60-percent-waste.html  analytics.css  analytics.js  animations.jsx  benchmarks.html  blog.html  components.jsx  compression-without-losing-quality.html  design-canvas.html  design-partner-program.html  docs.html  email-confirmed.html  fable-5.html  git-for-agent-context.html  harness.html  hero-demo.html  how-it-works.html  index.html  legal.css  orchestration.html  pipeline-data.js  pipeline-explorer.jsx  pricing.html  privacy.html  product.html  responsive.css  robots.txt  site.webmanifest  sitemap.xml  six-techniques-hub.jsx  terms.html  test.html  theme-init.js  theme.css  traverse-demo.html  waitlist.html  welcome.html  why-caches-dont-help.html
scripts/: build-dashboard.mjs  purge_cache.py  setup-stripe-billing.mjs  start-with-adc.sh
src/: proxy.ts
supabase/: add_waitlist_fields.sql  create_waitlist_table.sql  fix_rls_policy.sql
tests/: billing_checkout_canonical_state.test.mjs  billing_checkout_session_reservation.test.mjs  billing_control_rate_limit.test.mjs  billing_customer_owner_fencing.test.mjs  billing_maintenance_deployment.test.mjs  billing_maintenance_surface.test.mjs  billing_recovery_scope.test.mjs  (+59 more)
(+565 files in other folders)
