[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brevitas-systems"
version = "0.9.5"
description = "Drop Brevitas between your agents — compress context, cut costs, keep quality."
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
anthropic     = ["anthropic>=0.28.0"]
openai        = ["openai>=1.30.0"]
semanticcache = ["sentence-transformers>=3", "numpy>=1.24"]
all           = ["anthropic>=0.28.0", "openai>=1.30.0", "sentence-transformers>=3", "numpy>=1.24"]

[project.scripts]
brevitas = "brevitas.cli:main"
bvx      = "brevitas.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["brevitas*"]
